Refactor LogoStrip class to support multiple containers and dynamic animation settings

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Main container for the logo strip -->
-    <div class="logo-strip-container">
+    <div class="logo-strip-container" animation-duration="20" animation-direction="1">
         <!-- Logo strip that will be animated -->
         <div class="logo-strip">
             <!-- Original logo set that will be cloned -->
